--- a/Client/Dt.App/Dt.App.csproj
+++ b/Client/Dt.App/Dt.App.csproj
@@ -1,7 +1,9 @@
 ﻿<Project Sdk="MSBuild.Sdk.Extras/3.0.22">
 
   <PropertyGroup>
-    <Description>DT框架库</Description>
+    <PackageId>Dt</PackageId>
+    <Description>DT框架库</Description>    <!--将引用的项目合并打包-->
+    <TargetsForTfmSpecificBuildOutput>$(TargetsForTfmSpecificBuildOutput);CopyProjectReferencesToPackage</TargetsForTfmSpecificBuildOutput>
   </PropertyGroup>
 
   <Import Project="..\Common\dtc.props" />
@@ -11,8 +13,15 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Dt.Core\Dt.Core.csproj" />
-    <ProjectReference Include="..\Dt.Base\Dt.Base.csproj" />
+    <ProjectReference Include="..\Dt.Core\Dt.Core.csproj" PrivateAssets="all" />
+    <ProjectReference Include="..\Dt.Base\Dt.Base.csproj" PrivateAssets="all" />
   </ItemGroup>
 
+  <Target Name="CopyProjectReferencesToPackage" DependsOnTargets="ResolveReferences">
+    <ItemGroup>
+      <BuildOutputInPackage Include="@(ReferenceCopyLocalPaths-&gt;WithMetadataValue('ReferenceSourceTarget', 'ProjectReference'))" />
+      <!--uwp包含引用项目的xbf文件-->
+      <TfmSpecificPackageFile Include="@(_LayoutFile)" PackagePath="lib\$(TargetFramework)\%(_LayoutFile.TargetPath)" Condition="'$(TargetFramework)' == 'uap10.0.18362'" />
+    </ItemGroup>
+  </Target>
 </Project>
