--- a/Client/Dt.App/Dt.App.csproj
+++ b/Client/Dt.App/Dt.App.csproj
@@ -4,6 +4,7 @@
     <PackageId>Dt</PackageId>
     <Description>DT框架库</Description>    <!--将引用的项目合并打包-->
     <TargetsForTfmSpecificBuildOutput>$(TargetsForTfmSpecificBuildOutput);CopyProjectReferencesToPackage</TargetsForTfmSpecificBuildOutput>
+    <Version>1.9.0</Version>
   </PropertyGroup>
 
   <Import Project="..\Common\dtc.props" />
