--- a/Client/Dt.Shell.iOS/Info.plist
+++ b/Client/Dt.Shell.iOS/Info.plist
@@ -64,5 +64,27 @@
 	</dict>
 	<key>CFBundleDisplayName</key>
 	<string>搬运工</string>
+	<key>CFBundleDocumentTypes</key>
+	<array>
+		<dict>
+			<key>LSItemContentTypes</key>
+			<array>
+        <string>public.data</string>
+				<string>public.content</string>
+			</array>
+      <key>LSHandlerRank</key>
+      <string>Alternate</string>
+		</dict>
+    <dict>
+      <key>CFBundleTypeName</key>
+      <string>Image</string>
+      <key>LSHandlerRank</key>
+      <string>Alternate</string>
+      <key>LSItemContentTypes</key>
+      <array>
+        <string>public.image</string>
+      </array>
+    </dict>
+	</array>
 </dict>
 </plist>
