--- a/Client/Common/Dtc-Stable.props
+++ b/Client/Common/Dtc-Stable.props
@@ -5,7 +5,7 @@
     <Product>DT业务基础平台</Product>
     <Copyright>Copyright © 2020</Copyright>
     <Version>2.0.0</Version>
-    <NoWarn>$(NoWarn);NU1701;Uno0001</NoWarn>
+    <NoWarn>$(NoWarn);1591;NU1701;Uno0001</NoWarn>
     <!-- Ensures the .xr.xml files are generated in a proper layout folder -->
     <GenerateLibraryLayout>true</GenerateLibraryLayout>
     <!-- 打包.nupkg时包含pdb文件，用于调试 -->
