--- a/Tools/Dt/Dt.csproj
+++ b/Tools/Dt/Dt.csproj
@@ -45,13 +45,27 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Compile Include="DtCmds.cs" />
-    <Compile Include="Forms\FvForm.cs">
+    <Compile Include="CmdForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Forms\FvForm.Designer.cs">
-      <DependentUpon>FvForm.cs</DependentUpon>
+    <Compile Include="CmdForm.Designer.cs">
+      <DependentUpon>CmdForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="DtCmds.cs" />
+    <Compile Include="Editor\CellXaml.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Editor\CellXaml.Designer.cs">
+      <DependentUpon>CellXaml.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Editor\ICmdForm.cs" />
+    <Compile Include="Editor\LvXaml.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Editor\LvXaml.Designer.cs">
+      <DependentUpon>LvXaml.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Kit.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="DtPackage.cs" />
   </ItemGroup>
@@ -142,6 +156,17 @@
       <ReferenceOutputAssembly>false</ReferenceOutputAssembly>
       <IncludeOutputGroupsInVSIX>TemplateProjectOutputGroup%3b</IncludeOutputGroupsInVSIX>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="CmdForm.resx">
+      <DependentUpon>CmdForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Editor\CellXaml.resx">
+      <DependentUpon>CellXaml.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Editor\LvXaml.resx">
+      <DependentUpon>LvXaml.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(VSToolsPath)\VSSDK\Microsoft.VsSDK.targets" Condition="'$(VSToolsPath)' != ''" />
