--- a/Tools/CommonLib/ProjectTemplate.csproj
+++ b/Tools/CommonLib/ProjectTemplate.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Dt" Version="1.9.1" />
+    <PackageReference Include="Dt.Client" Version="1.9.1" />
     <PackageReference Include="System.Text.Json" Version="5.0.2" />
     <PackageReference Include="Microsoft.Data.Sqlite" Version="5.0.3" />
   </ItemGroup>
