--- a/Tools/Svc/Svc.csproj
+++ b/Tools/Svc/Svc.csproj
@@ -9,11 +9,11 @@
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectTypeGuids>{82b43b9b-a64c-4715-b499-d71e9ca2bd60};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
-    <ProjectGuid>{8BA7F8C8-F6A0-40C3-93FA-63FB6000738E}</ProjectGuid>
+    <ProjectGuid>{CC44A804-F77B-4E52-9F66-DEB46D0F2DFA}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>CommonLib</RootNamespace>
-    <AssemblyName>CommonLib</AssemblyName>
+    <RootNamespace>Svc</RootNamespace>
+    <AssemblyName>Svc</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <GeneratePkgDefFile>false</GeneratePkgDefFile>
@@ -54,16 +54,20 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="Api\Api1.cs" />
+    <None Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <None Include="Stub.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="etc\config\global.json" />
+    <None Include="etc\config\logger.json" />
+    <None Include="etc\config\service.json" />
+    <None Include="Properties\launchSettings.json" />
+    <None Include="Stub.cs" />
     <None Include="ProjectTemplate.csproj" />
   </ItemGroup>
   <ItemGroup>
-    <VSTemplate Include="CommonLib.vstemplate">
-      <OutputSubPath>搬运工</OutputSubPath>
-    </VSTemplate>
+    <VSTemplate Include="Svc.vstemplate" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Logo.ico" />
