--- a/Client/Dt.Cells/Dt.Cells.csproj
+++ b/Client/Dt.Cells/Dt.Cells.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="MSBuild.Sdk.Extras/3.0.22">
 
   <PropertyGroup>
-    <Description>DT平台Excel控件</Description>
+    <Description>搬运工客户端Excel控件</Description>
     <!--将引用的项目合并打包-->
     <TargetsForTfmSpecificBuildOutput>$(TargetsForTfmSpecificBuildOutput);CopyProjectReferencesToPackage</TargetsForTfmSpecificBuildOutput>
   </PropertyGroup>
