服务生成xml注释

--- a/Service/src/Dt.Cm/Dt.Cm.csproj
+++ b/Service/src/Dt.Cm/Dt.Cm.csproj
@@ -6,6 +6,7 @@
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
     <NoWarn>1701;1702;1705;1591</NoWarn>
+    <DocumentationFile>bin\Debug\net5.0\Dt.Cm.xml</DocumentationFile>
   </PropertyGroup>
 
   <ItemGroup>
