--- a/Service/src/Dt.Pub/Dt.Pub.csproj
+++ b/Service/src/Dt.Pub/Dt.Pub.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
@@ -6,6 +6,7 @@
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
     <NoWarn>1701;1702;1705;1591</NoWarn>
+    <DocumentationFile>bin\Debug\net5.0\Dt.Pub.xml</DocumentationFile>
   </PropertyGroup>
 
   <ItemGroup>
