--- a/Service/src/Dt.Core/Dt.Core.csproj
+++ b/Service/src/Dt.Core/Dt.Core.csproj
@@ -19,6 +19,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Include="..\..\..\Client\Dt.Core\Base\Locker\AsyncLocker.cs" Link="Internal\Misc\AsyncLocker.cs" />
     <Compile Include="..\..\..\Client\Dt.Core\Kit\Kit-Encrypt.cs" Link="Kit\Kit-Encrypt.cs" />
     <Compile Include="..\..\..\Client\Dt.Core\Kit\Kit-Json.cs" Link="Kit\Kit-Json.cs" />
   </ItemGroup>
