增加Dlg对话框关闭时的返回值，返回值传递给ShowAsync OnClosing OnClosed方法 和 Closing Closed事件

--- a/Client/Dt.Base/Dt.Base.csproj
+++ b/Client/Dt.Base/Dt.Base.csproj
@@ -25,6 +25,8 @@
     <Page Remove="Chat\WebRTC\VideoRecver.xaml" />
     <Compile Remove="Chat\WebRTC\VideoRecver.xaml.cs" />
     <None Include="Chat\WebRTC\VideoRecver.xaml.cs" />
+    <Compile Remove="Chat\WebRTC\WebRtcApi.cs" />
+    <None Include="Chat\WebRTC\WebRtcApi.cs" />
   </ItemGroup>
 
 </Project>
