--- a/.gitignore
+++ b/.gitignore
@@ -365,3 +365,4 @@ Client/Dt.Base/Dt.Base.xml
 Client/Dt.App/Dt.App.xml
 Service/src/Dt.Core/Dt.Core.xml
 Service/src/Dt.Cm/Dt.Cm.xml
+gitconfig.txt
