--- a/Client/Dt.Shell.Wasm/Dt.Shell.Wasm.csproj
+++ b/Client/Dt.Shell.Wasm/Dt.Shell.Wasm.csproj
@@ -7,7 +7,7 @@
     <NoWarn>NU1701</NoWarn>
 
     <!-- 必须sdk完整路径 -->
-    <NetCoreWasmSDKUri>d:\dt\client\Common\wasm\dotnet-runtime-wasm-windows-9079e3a-89313ca0693-884011754-sqlite.zip</NetCoreWasmSDKUri>
+    <NetCoreWasmSDKUri>d:\dt\client\Common\wasm\dotnet-runtime-wasm-windows-aa46e57-c8a658ccadf-1128315637-sqlite.zip</NetCoreWasmSDKUri>
 
     <!-- 默认Interpreter -->
     <!--<WasmShellMonoRuntimeExecutionMode>InterpreterAndAOT</WasmShellMonoRuntimeExecutionMode>-->
@@ -51,8 +51,10 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.Windows.Compatibility" Version="5.0.1" />
     <PackageReference Include="Uno.UI.WebAssembly" Version="3.8.13" />
-    <PackageReference Include="Uno.Wasm.Bootstrap" Version="3.0.0-dev.95" />
-    <PackageReference Include="Uno.Wasm.Bootstrap.DevServer" Version="3.0.0-dev.95" PrivateAssets="all" />
+    <PackageReference Include="Uno.Wasm.Bootstrap" Version="3.0.0-dev.132" />
+    <PackageReference Include="Uno.Wasm.Bootstrap.DevServer" Version="3.0.0-dev.132" PrivateAssets="all" />
+    <!-- 升级wasmsdk压缩包后第一次生成时需要引用该包，生成后将dotnet.js、dotnet.wasm替换wasmsdk压缩包的同名文件，再次build不需引用该包，节约时间 -->
+    <!--<PackageReference Include="Uno.sqlite-wasm" Version="3.34.1.3" />-->
   </ItemGroup>
 
   <ItemGroup>
