--- a/Client/Dt.Sample/Dt.Sample.csproj
+++ b/Client/Dt.Sample/Dt.Sample.csproj
@@ -59,5 +59,6 @@
   <ItemGroup>
     <ProjectReference Include="..\Dt.Core\Dt.Core.csproj" />
     <ProjectReference Include="..\Dt.Base\Dt.Base.csproj" />
+    <ProjectReference Include="..\Dt.App\Dt.App.csproj" />
   </ItemGroup>
 </Project>
