--- a/Tools/Dt/Dt.csproj
+++ b/Tools/Dt/Dt.csproj
@@ -166,16 +166,32 @@
     <Compile Include="Editor\CTree.Designer.cs">
       <DependentUpon>CTree.cs</DependentUpon>
     </Compile>
-    <Compile Include="Editor\ICmdForm.cs" />
-    <Compile Include="Editor\LvXaml.cs">
+    <Compile Include="LvXaml\ICmdForm.cs" />
+    <Compile Include="LvXaml\LvXaml.cs">
       <SubType>UserControl</SubType>
     </Compile>
-    <Compile Include="Editor\LvXaml.Designer.cs">
+    <Compile Include="LvXaml\LvXaml.Designer.cs">
       <DependentUpon>LvXaml.cs</DependentUpon>
     </Compile>
     <Compile Include="Kit.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="DtPackage.cs" />
+    <EmbeddedResource Include="SingleTbl\EntityWin.xaml.cs">
+      <DependentUpon>EntityWin.xaml</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="SingleTbl\EntityForm.xaml.cs">
+      <DependentUpon>EntityForm.xaml</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="SingleTbl\EntityList.xaml.cs">
+      <DependentUpon>EntityList.xaml</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="SingleTbl\EntityObj.cs" />
+    <Compile Include="SingleTbl\SingleTblForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="SingleTbl\SingleTblForm.Designer.cs">
+      <DependentUpon>SingleTblForm.cs</DependentUpon>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <None Include="source.extension.vsixmanifest">
@@ -200,7 +216,10 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.VisualStudio.SDK" Version="16.0.206" ExcludeAssets="runtime" />
-    <PackageReference Include="Microsoft.VSSDK.BuildTools" Version="16.10.7" />
+    <PackageReference Include="Microsoft.VSSDK.BuildTools" Version="16.10.1055">
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      <PrivateAssets>all</PrivateAssets>
+    </PackageReference>
   </ItemGroup>
   <ItemGroup>
     <Content Include="Resources\Logo.png">
@@ -368,8 +387,27 @@
     <EmbeddedResource Include="Editor\CTree.resx">
       <DependentUpon>CTree.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Editor\LvXaml.resx">
+    <EmbeddedResource Include="LvXaml\LvXaml.resx">
       <DependentUpon>LvXaml.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="SingleTbl\SingleTblForm.resx">
+      <DependentUpon>SingleTblForm.cs</DependentUpon>
+    </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="SingleTbl\EntityWin.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="SingleTbl\EntityForm.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
+    <EmbeddedResource Include="SingleTbl\EntityList.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
